[package]
name = "ilmenite"
version = "0.10.0"
authors = ["Austin Johnson <me@austinj.me>"]
repository = "https://github.com/AustinJ235/ilmenite"
documentation = "https://docs.rs/ilmenite"
description = "A rust library for shaping, placing, and rasterizing text primarily for Basalt."
license = "MIT"
readme = "README.md"
keywords = ["vulkan", "text", "shaper", "raster"]
categories = ["graphics","gui","parsing","text-processing"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = { "git" = "https://github.com/vulkano-rs/vulkano.git", rev = "3ae9ec0" }
vulkano-shaders = { "git" = "https://github.com/vulkano-rs/vulkano.git", rev = "3ae9ec0" }
ash = "0.37"
allsorts = "0.7.1"
ordered-float = "2.10.0"
parking_lot = "0.12.0"
crossbeam = "0.8.1"
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
