[package]
name = "ilmenite"
version = "0.14.0"
authors = ["Austin Johnson <me@austinj.me>"]
repository = "https://github.com/AustinJ235/ilmenite"
documentation = "https://docs.rs/ilmenite"
description = "A rust library for shaping, placing, and rasterizing text primarily for Basalt."
license = "MIT"
readme = "README.md"
keywords = ["vulkan", "text", "shaper", "raster"]
categories = ["graphics","gui","parsing","text-processing"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.33"
vulkano-shaders = "0.33"
ash = "0.37"
allsorts = { version = "0.14", default-features = false, features = ["flate2_rust"] }
ordered-float = "3"
parking_lot = "0.12"
crossbeam = "0.8"
